--- a/neoPixel_runner/platformio.ini
+++ b/neoPixel_runner/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelmegaavr
 board = nano_every
 framework = arduino
+lib_deps = 
+	Adafruit_NeoPixel
+	adafruit/Adafruit NeoPixel@^1.11.0
